@@ -11,6 +11,7 @@
  - Add H(div) and H(curl) element-modifiers for TPEs
  - Add enriched element, i.e. sum of elements (e.g. for building Mini)
  - Add multidimensional taylor elements
+ - Add Gauss Lobatto Legendre elements
  - Finding non-vanishing DoFs on a facets
  - Add tensor product quadrature rule
  - Make regression tests working again after few years
